Add H&E July 2020 to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,15 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr>
+                    <td class="portfolio_date">July 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/h&e.jpg" title="H&E Naturist" />
+                    </td>
+                    <td>
+                        The pros and cons of online naturist events (<a href="https://www.henaturist.net/product/he-naturist-magazine-july-2020/">issue</a>)
+                    </td>
+                </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">31st May 2020</td>
                     <td>
