--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,24 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">7th July 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/the-junction/the-rift-672aa0ff38bf?source=friends_link&sk=0f63f263efeb42e197e4b72d82bc3fd4">The Rift</a> [Fiction]
+                    </td>
+                </tr>
+                <tr>
+                    <td class="portfolio_date">7th July 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/prism_and_pen.jpg" title="Prism & Pen" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/prismnpen/power-cuts-love-heals-f5786d19836e?source=friends_link&sk=0ba36ac60cb19b24c200f328ea91ecad">Power Cuts; Love Heals</a> [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">July 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/h&e.jpg" title="H&E Naturist" />
