--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">12th July 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
+                    </td>
+                    <td>
+                        <a href="https://psiloveyou.xyz/the-night-we-met-9e2b2cc6cd78?source=friends_link&sk=618122fdd870258fedb8e8b735f29ab0">The Night We Met</a> [Poetry]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">7th July 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
