Add "Tattoo artists find fresh ways to work in lockdown"to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">13th July 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/i.jpg" title="i newspaper" />
+                    </td>
+                    <td>
+                        <a href="https://inews.co.uk/culture/tattoo-artists-return-studios-work-lockdown-526547">
+                            Tattoo artists find fresh ways to work in lockdown
+                        </a>
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">12th July 2020</td>
                     <td>
