Add "The History of Aerial Hoop" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -26,6 +26,17 @@
                 <tr>
                     <td class="portfolio_date">17th July 2020</td>
                     <td>
+                        <img class="portfolio_source_image" src="./images/history_of_yesterday.png" title="History of Yesterday" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/history-of-yesterday/the-history-of-aerial-hoop-fd39c2803732?source=friends_link&sk=f3c5b88e6a4f20ae09a3e2a9a283932a">
+                            The History of Aerial Hoop
+                        </a>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="portfolio_date">17th July 2020</td>
+                    <td>
                         <img class="portfolio_source_image" src="./images/polyamory_today.jpeg" title="Polyamory Today" />
                     </td>
                     <td>
