Add "SEX: A History of British Punk" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">23rd July 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/the-junction/sex-8db4cac2cf4d?source=friends_link&sk=7e04b65561b97c04055cc594c8fd960f">SEX: A History of British Punk</a> [Poetry]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">17th July 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/history_of_yesterday.png" title="History of Yesterday" />
