--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for some examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">30th July 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/written-tales/the-things-i-had-to-do-4cf84ccf2db4?source=friends_link&sk=2efa3e450a3d135a4b202deca8bc8359">The Things I Had To Do</a> [Poetry]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">23rd July 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
