Add "Laura's Dreams" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -21,8 +21,17 @@
     </ul>
     <div class="contents_wrapper">
         <div class="contents">
-            <h3>See below for some examples of my previous work.</h3>
+            <h3>See below for examples of my previous work.</h3>
             <table class="portfolio_table">
+                <tr>
+                    <td class="portfolio_date">13th August 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/short_kid_stories.png" title="Short Kid Stories" />
+                    </td>
+                    <td>
+                        <a href="https://www.shortkidstories.com/story/lauras-dreams/">Laura's Dreams</a> [Children's Fiction]
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">30th July 2020</td>
                     <td>
