--- a/portfolio.html
+++ b/portfolio.html
@@ -11,7 +11,7 @@
     <div class="header">
         <div class="header_text">
             <h1>Kim Barrett</h1>
-            <h2>Freelance writer</h1>
+            <h2>Freelance writer</h2>
         </div>
     </div>
     <ul class="nav_bar">
@@ -19,37 +19,14 @@
         <li class="current"><a href="./portfolio.html">Portfolio</a></li>
         <li><a href="./contact.html">Contact</a></li>
     </ul>
+    <ul class="nav_bar">
+        <li class="current"><a href="./portfolio.html">Non-Fiction</a></li>
+        <li><a href="./fiction-portfolio.html">Fiction/Poetry</a></li>
+    </ul>
     <div class="contents_wrapper">
         <div class="contents">
             <h3>See below for examples of my previous work.</h3>
             <table class="portfolio_table">
-                <tr>
-                    <td class="portfolio_date">13th August 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/short_kid_stories.png" title="Short Kid Stories" />
-                    </td>
-                    <td>
-                        <a href="https://www.shortkidstories.com/story/lauras-dreams/">Laura's Dreams</a> [Children's Fiction]
-                    </td>
-                </tr>
-                <tr>
-                    <td class="portfolio_date">30th July 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales" />
-                    </td>
-                    <td>
-                        <a href="https://medium.com/written-tales/the-things-i-had-to-do-4cf84ccf2db4?source=friends_link&sk=2efa3e450a3d135a4b202deca8bc8359">The Things I Had To Do</a> [Poetry]
-                    </td>
-                </tr>
-                <tr>
-                    <td class="portfolio_date">23rd July 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
-                    </td>
-                    <td>
-                        <a href="https://medium.com/the-junction/sex-8db4cac2cf4d?source=friends_link&sk=7e04b65561b97c04055cc594c8fd960f">SEX: A History of British Punk</a> [Poetry]
-                    </td>
-                </tr>
                 <tr>
                     <td class="portfolio_date">17th July 2020</td>
                     <td>
@@ -84,33 +61,6 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="portfolio_date">12th July 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
-                    </td>
-                    <td>
-                        <a href="https://psiloveyou.xyz/the-night-we-met-9e2b2cc6cd78?source=friends_link&sk=618122fdd870258fedb8e8b735f29ab0">The Night We Met</a> [Poetry]
-                    </td>
-                </tr>
-                <tr>
-                    <td class="portfolio_date">7th July 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
-                    </td>
-                    <td>
-                        <a href="https://medium.com/the-junction/the-rift-672aa0ff38bf?source=friends_link&sk=0f63f263efeb42e197e4b72d82bc3fd4">The Rift</a> [Fiction]
-                    </td>
-                </tr>
-                <tr>
-                    <td class="portfolio_date">7th July 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/prism_and_pen.jpg" title="Prism & Pen" />
-                    </td>
-                    <td>
-                        <a href="https://medium.com/prismnpen/power-cuts-love-heals-f5786d19836e?source=friends_link&sk=0ba36ac60cb19b24c200f328ea91ecad">Power Cuts; Love Heals</a> [Fiction]
-                    </td>
-                </tr>
-                <tr>
                     <td class="portfolio_date">July 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/h&e.jpg" title="H&E Naturist" />
@@ -141,15 +91,6 @@
                         </a>
                     </td>
                 </tr>
-                <tr>
-                    <td class="portfolio_date">22nd May 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
-                    </td>
-                    <td>
-                        <a href="https://psiloveyou.xyz/george-the-rabbit-goes-on-a-date-79d011fa4bde?source=friends_link&sk=8c2bf6d3e28038fdce67ec386fdc8543">George the Rabbit Goes on a Date</a> [Fiction]
-                    </td>
-                </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">21st May 2020</td>
                     <td>
@@ -161,7 +102,7 @@
                         </a>
                     </td>
                 </tr>
-                <tr class="important_portfolio_entry">
+                <tr>
                     <td class="portfolio_date">1st May 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/the_ascent.png" title="The Ascent" />
@@ -170,15 +111,6 @@
                         <a href="https://medium.com/the-ascent/wake-up-fully-refreshed-each-morning-e330230e17cc?source=friends_link&sk=3c2d13f8d7027218b742326a941f9f98">
                             Wake Up Fully Refreshed Each Morning
                         </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="portfolio_date">24th April 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
-                    </td>
-                    <td>
-                        <a href="https://psiloveyou.xyz/the-basics-of-pregnancy-in-pandas-c64f5a6c4730?source=friends_link&sk=0145c8fbad56ec85045d24402e43cd3a">The Basics of Pregnancy in Pandas</a> [Fiction]
                     </td>
                 </tr>
                 <tr class="important_portfolio_entry">
@@ -215,15 +147,6 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="portfolio_date">4th April 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/short_kid_stories.png" title="Short Kid Stories" />
-                    </td>
-                    <td>
-                        <a href="https://www.shortkidstories.com/story/how-lizard-was-born/">How Lizard Was Born</a> [Children's Fiction]
-                    </td>
-                </tr>
-                <tr>
                     <td class="portfolio_date">14th March 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/fearless_she_wrote.png" title="Fearless She Wrote" />
@@ -243,15 +166,6 @@
                         <a href="https://medium.com/@kimbarrett92/learning-to-love-yourself-through-tattoos-71e5bf414ae4?source=friends_link&sk=b63533972f40240558848c92ac12963d">
                             Learning to love yourself through tattoos
                         </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="portfolio_date">9th February 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
-                    </td>
-                    <td>
-                        <a href="https://psiloveyou.xyz/for-my-love-5c7f3507a46d?source=friends_link&sk=505b7d199d2c881d3a506391df14d7ce">For My Love</a> [Poetry]
                     </td>
                 </tr>
                 <tr>
