Fix date for "Once Upon a Time, I Was Very Small".

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -28,7 +28,7 @@
             <h3>See below for examples of my previous work.</h3>
             <table class="portfolio_table">
                 <tr>
-                    <td class="portfolio_date">23rd July 2020</td>
+                    <td class="portfolio_date">27th August 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
                     </td>
