--- a/portfolio.html
+++ b/portfolio.html
@@ -19,13 +19,9 @@
         <li class="current"><a href="./portfolio.html">Portfolio</a></li>
         <li><a href="./contact.html">Contact</a></li>
     </ul>
-    <ul class="nav_bar">
-        <li class="current"><a href="./portfolio.html">Non-Fiction</a></li>
-        <li><a href="./fiction-portfolio.html">Fiction/Poetry</a></li>
-    </ul>
     <div class="contents_wrapper">
         <div class="contents">
-            <h3>See below for examples of my previous work.</h3>
+            <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
                     <td class="portfolio_date">17th July 2020</td>
