Re-write "About Me" text.

--- a/index.html
+++ b/index.html
@@ -22,19 +22,22 @@
     <div class="contents_wrapper">
         <div class="contents">
             <img class="headshot" src="./images/headshot.jpg" alt="Photo of Kim" />
-            <p>I'm a freelance writer living in Oxford, UK.</p>
             <p>
-                I worked as a Java software developer for 5 years.
-                During this time I developed a deep interest in testing and architecting 
-                code to be easily tested.
-                I worked with AWS, micro-services and serverless architecture.
-                I am always keen to share, through writing, the skills and techniques I developed.
+                I am a freelance writer with bylines in 
+                the Huffington Post, the i paper and the Metro.
+                I write non-fiction & fiction about a variety of topics, 
+                including mental health, sexuality and the environment.
             </p>
             <p>
-                My other interests include language, sexuality and mental health, but 
-                I love learning more and will write about most topics.
+                I live in Oxford, UK and my pronouns are they/them.
             </p>
-            <p>Please <a href="./contact.html">get in touch</a> to discuss your requirements.</p>
+            <h3>Background</h3>
+            <p>
+                I grew up near Skipton in West Yorkshire then went to Warwick University 
+                to study Discrete Mathematics.
+                I worked as a Java software developer for over 5 years
+                before starting freelance writing in 2019.
+            </p>
         </div>
     </div>
     <div class="footer">
