--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">Sept-Oct 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/glreview.jpg" title="The Gay & Lesbian Review" />
+                    </td>
+                    <td>
+                        <a href="https://glreview.org/article/languages-adapt-to-the-nonbinary/">
+                            Languages Adapt to the Nonbinary
+                        </a>
+                    </td>
+                </tr>
                 <tr>
                     <td class="portfolio_date">17th July 2020</td>
                     <td>
