Add "The Stranger Within" to portfolio.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">3rd September 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/the_creative_cafe.png" title="The Creative Cafe" />
+                    </td>
+                    <td>
+                        <a href="https://thecreative.cafe/the-stranger-within-efb6fdcca1e7?source=friends_link&sk=17e8329005819ed4b28fc35dd846a09b">The Stranger Within</a> [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">27th August 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/the_junction.jpeg" title="The Junction" />
