Make "George the Rabbit" important.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -95,7 +95,7 @@
                         <a href="https://medium.com/prismnpen/power-cuts-love-heals-f5786d19836e?source=friends_link&sk=0ba36ac60cb19b24c200f328ea91ecad">Power Cuts; Love Heals</a> [Fiction]
                     </td>
                 </tr>
-                <tr>
+                <tr class="important_portfolio_entry">
                     <td class="portfolio_date">22nd May 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
