Add "How the Beauty of a Coal Power Station Led to its Downfall" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">13th September 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/ifila.jpg" title="It's Freezing in LA!" />
+                    </td>
+                    <td>
+                        <a href="https://www.itsfreezinginla.co.uk/post/didcot-a">
+                            How the Beauty of a Coal Power Station Led to its Downfall
+                        </a>
+                    </td>
+                </tr>
+                <tr class="important_portfolio_entry">
                     <td class="portfolio_date">Sept-Oct 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/glreview.jpg" title="The Gay & Lesbian Review" />
