Add "Finding Sobriety Through Anxiety" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
+                <tr>
+                    <td class="portfolio_date">4th October 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/goodness_magazine.jpg" title="Goodness Magazine" />
+                    </td>
+                    <td>
+                        <a href="https://www.goodness-magazine.com/finding-sobriety-through-anxiety/">
+                            Finding Sobriety Through Anxiety
+                        </a>
+                    </td>
+                </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">13th September 2020</td>
                     <td>
