--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">8th October 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/wordsmith_library.png" title="Wordsmith Library" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/wordsmith-library/the-poison-or-the-cure-50d9d3d11699?source=friends_link&sk=e5613665e40cef8e2fcff55369915089">The Poison or the Cure?</a> [Poetry]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">3rd September 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/the_creative_cafe.png" title="The Creative Cafe" />
