Add "My Welcome to Surrogacy" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">9th October 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/kims_surrogacy_journey.jpg" title="Kim's Surrogacy Journey" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/kims-surrogacy-journey/my-welcome-to-surrogacy-75c0eb310301?source=friends_link&sk=7fee76de63ae9151fe354a3cdd52db6e">
+                            My Welcome to Surrogacy
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">4th October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/goodness_magazine.jpg" title="Goodness Magazine" />
