--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">18th October 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales" />
+                    </td>
+                    <td>
+                        The Exorcism (<a href="https://www.amazon.co.uk/dp/B08L9962ZW">issue</a>) [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">8th October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/wordsmith_library.png" title="Wordsmith Library" />
