Add "The Fractal Nature of Life" to fiction portfolio.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -33,6 +33,15 @@
                     </td>
                 </tr>
                 <tr>
+                    <td class="portfolio_date">15th October 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/the_creative_cafe.png" title="Creative Cafe" />
+                    </td>
+                    <td>
+                        <a href="https://thecreative.cafe/the-fractal-nature-of-life-63945312c96b?source=friends_link&sk=c957fa47c6a802ab079e36df08bb2f32">The Fractal Nature of Life</a> [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">8th October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/wordsmith_library.png" title="Wordsmith Library" />
