--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">31st October 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
+                    </td>
+                    <td>
+                        <a href="https://kimbarrett92.medium.com/9-ways-witches-impact-the-environment-ed65e888411a?sk=832ccfe848c9c785d4203012ed8cfb54">
+                            9 Ways Witches Impact the Environment
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">23rd October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/kims_surrogacy_journey.jpg" title="Kim's Surrogacy Journey" />
