--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,24 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">1st November 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
+                    </td>
+                    <td>
+                        <a href="https://psiloveyou.xyz/the-persistent-cough-2adcf700dd55?sk=6dc317314e84b3d8b07cd7f58823b648">The Persistent Cough</a> [Poetry]
+                    </td>
+                </tr>
+                <tr>
+                    <td class="portfolio_date">28th October 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/wordsmith_library.png" title="Wordsmith Library" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/wordsmith-library/i-am-real-8a4149a91b91?sk=e18381a573135119e8fd01e7c8db83b9">I Am Real</a> [Poetry]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">18th October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales" />
