Add "Magazine" to Written Tales ezine entry.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -44,7 +44,7 @@
                 <tr>
                     <td class="portfolio_date">18th October 2020</td>
                     <td>
-                        <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales" />
+                        <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales Magazine" />
                     </td>
                     <td>
                         The Exorcism (<a href="https://www.amazon.co.uk/dp/B08L9962ZW">issue</a>) [Fiction]
