--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">6th November 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/kims_surrogacy_journey.jpg" title="Kim's Surrogacy Journey" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/kims-surrogacy-journey/why-im-not-the-right-surrogate-for-you-79039a6b3915?sk=d0ebe0998bb9269b4fbee3fa633fafe5">
+                            Why I’m Not the Right Surrogate For You
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">31st October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
