Collapse Kim's Surrogacy Journey entries into one.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,17 +24,6 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
-                    <td class="portfolio_date">6th November 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/kims_surrogacy_journey.jpg" title="Kim's Surrogacy Journey" />
-                    </td>
-                    <td>
-                        <a href="https://medium.com/kims-surrogacy-journey/why-im-not-the-right-surrogate-for-you-79039a6b3915?sk=d0ebe0998bb9269b4fbee3fa633fafe5">
-                            Why I’m Not the Right Surrogate For You
-                        </a>
-                    </td>
-                </tr>
-                <tr>
                     <td class="portfolio_date">31st October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
@@ -46,25 +35,12 @@
                     </td>
                 </tr>
                 <tr>
-                    <td class="portfolio_date">23rd October 2020</td>
+                    <td class="portfolio_date">Oct 2020 - present</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/kims_surrogacy_journey.jpg" title="Kim's Surrogacy Journey" />
                     </td>
                     <td>
-                        <a href="https://medium.com/kims-surrogacy-journey/how-to-find-a-surrogate-758be5c0e133?source=friends_link&sk=60a67160d4d0d8ad86022090e97ebbbe">
-                            How to Find a Surrogate
-                        </a>
-                    </td>
-                </tr>
-                <tr>
-                    <td class="portfolio_date">9th October 2020</td>
-                    <td>
-                        <img class="portfolio_source_image" src="./images/kims_surrogacy_journey.jpg" title="Kim's Surrogacy Journey" />
-                    </td>
-                    <td>
-                        <a href="https://medium.com/kims-surrogacy-journey/my-welcome-to-surrogacy-75c0eb310301?source=friends_link&sk=7fee76de63ae9151fe354a3cdd52db6e">
-                            My Welcome to Surrogacy
-                        </a>
+                        <a href="https://medium.com/kims-surrogacy-journey/">Kim's Surrogacy Journey</a> [blog]
                     </td>
                 </tr>
                 <tr>
