--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -23,6 +23,15 @@
         <div class="contents">
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
+                <tr>
+                    <td class="portfolio_date">9th December 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/written-tales/just-go-outside-71b8a128a4f9?sk=ca48b5dced4e7f8487cc3860f4f4ee6b">Just Go Outside</a> [Fiction]
+                    </td>
+                </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">6th November 2020</td>
                     <td>
