--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">February 2021</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/confluence_magazine.jpg" title="Confluence Magazine" />
+                    </td>
+                    <td>
+                        The Laundry Detergent Scoop (<a href="https://www.confluencemagazine.co.uk/confluence-issue-12">issue</a>) [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">9th December 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/written_tales.jpg" title="Written Tales" />
