--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
             <p>
                 I grew up near Skipton in West Yorkshire then went to Warwick University 
                 to study Discrete Mathematics.
-                I worked as a Java software developer for over 5 years
-                before starting freelance writing in 2019.
+                I've worked as a Java software developer for over 7 years
+                and started freelance writing in 2019.
             </p>
         </div>
     </div>
