--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">8th March 2021</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/polyamory_today.jpeg" title="Polyamory Today" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/polyamory-today/whats-the-difference-between-a-friendship-and-a-relationship-c1ce0dc49c15?sk=dc9fada8200199294e8ef426bda43ed6">
+                            What's the Difference Between a Friendship and a Relationship?
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">31st October 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/medium.png" title="Medium" />
