--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">25th March 2021</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/ILLUMINATION.png" title="ILLUMINATION" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/illumination/the-power-of-speech-a1df080cb72d?sk=da37cf09c0db3d0d895ce633629adc7e">The Power of Speech</a> [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">February 2021</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/confluence_magazine.jpg" title="Confluence Magazine" />
