Add recent fiction publications to portfolio.
Includes Queerlings and Foglifter.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,33 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">14th May 2021</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
+                    </td>
+                    <td>
+                        <a href="https://psiloveyou.xyz/then-the-storm-came-12c403ca5729?sk=e7dad2944616ea56569e7b297dd65313">Then the Storm Came</a> [Fiction]
+                    </td>
+                </tr>
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">May 2021</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/queerlings.jpg" title="Queerlings" />
+                    </td>
+                    <td>
+                        <a href="https://queerlings.com/kimbarrett/">This Label is Enough</a> (<a href="https://queerlings.com/issue3/">issue</a>) [Creative Non-Fiction]
+                    </td>
+                </tr>
+                <tr class="important_portfolio_entry">
+                    <td class="portfolio_date">May 2021</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/foglifter.png" title="Foglifter" />
+                    </td>
+                    <td>
+                        My very queer pregnancy (<a href="https://foglifterjournal.com/product/foglifter-journal-volume-6-issue-1/">issue</a>) [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">25th March 2021</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/ILLUMINATION.png" title="ILLUMINATION" />
