Add "How to Negotiate Covid Boundaries in a Polyamorous Relationship" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -24,6 +24,17 @@
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">1st October 2021</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/polyamory_today.jpeg" title="Polyamory Today" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/polyamory-today/how-to-negotiate-covid-boundaries-in-a-polyamorous-relationship-26db0d3a9890?sk=64c9d17026f9886f232bc9d3275c84d21ce0dc49c15?sk=dc9fada8200199294e8ef426bda43ed6">
+                            How to Negotiate Covid Boundaries in a Polyamorous Relationship
+                        </a>
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">8th March 2021</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/polyamory_today.jpeg" title="Polyamory Today" />
