Add "The Lady & the Ring" to fiction portfolio.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">11th March 2022</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/prism_and_pen.jpg" title="Prism & Pen" />
+                    </td>
+                    <td>
+                        <a href="https://medium.com/prismnpen/the-lady-the-ring-a-queer-retelling-3aa77db648de?sk=5bf0c3eac43d76332bf0eb7d4b21bf71">The Lady & the Ring: a Queer Retelling</a> [Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">14th May 2021</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/ps_i_love_you.png" title="P.S. I Love You" />
