--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -24,6 +24,15 @@
             <h3>See below for examples of my previous work, or go to my <a href="./portfolio.html">non-fiction portfolio</a>.</h3>
             <table class="portfolio_table">
                 <tr>
+                    <td class="portfolio_date">23rd May 2022</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/nymphs.jpg" title="Nymphs" />
+                    </td>
+                    <td>
+                        <a href="https://nymphspublications.com/new-blog/treading-water-by-kim-barrett">Treading Water</a> [Creative Non-Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">11th March 2022</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/prism_and_pen.jpg" title="Prism & Pen" />
