Move CNF to fiction portfolio.

--- a/fiction-portfolio.html
+++ b/fiction-portfolio.html
@@ -240,6 +240,15 @@
                     </td>
                 </tr>
                 <tr>
+                    <td class="portfolio_date">16th April 2020</td>
+                    <td>
+                        <img class="portfolio_source_image" src="./images/pandemic_diaries.jpeg" title="Pandemic Diaries" />
+                    </td>
+                    <td>
+                        <a href="http://pandemicdiaries.us/how-to-go-for-a-walk-b4cc8eb0f133">How to Go for a Walk</a> [Creative Non-Fiction]
+                    </td>
+                </tr>
+                <tr>
                     <td class="portfolio_date">4th April 2020</td>
                     <td>
                         <img class="portfolio_source_image" src="./images/short_kid_stories.png" title="Short Kid Stories" />
