Add "The Power of Non-Verbal Conversations" to portfolio.

--- a/portfolio.html
+++ b/portfolio.html
@@ -23,6 +23,17 @@
         <div class="contents">
             <h3>See below for examples of my previous work, or go to my <a href="./fiction-portfolio.html">fiction/poetry portfolio</a>.</h3>
             <table class="portfolio_table">
+                <tr>
+                    <td class="portfolio_date">1st June 2024</td>
+                    <td class="portfolio_source_image">
+                        <p>Be Yourself</p>
+                    </td>
+                    <td>
+                        <a href="https://medium.com/life-tips/7121185202ba">
+                            The Power of Non-Verbal Conversations
+                        </a>
+                    </td>
+                </tr>
                 <tr class="important_portfolio_entry">
                     <td class="portfolio_date">30th March 2023</td>
                     <td>
